# ipass

./: Cargo.toml  README.md
.github/workflows/: release.yaml
src/: auth.rs  config.rs  daemon.rs  main.rs  srp.rs  util.rs
src/otp/: list.rs  mod.rs
src/pw/: get.rs  list.rs  mod.rs  save.rs
src/types/: auth.rs  mod.rs
