[package]
name = "ipass"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = "0.11.0-pre.2"
aead = { version = "0.6.0-rc.0", default-features = false }
base64 = "0.22.1"
clap = { version = "4", features = ["derive"] }
num = "0.4.3"
num-bigint = "0.4.6"
rand = "0.8.5"
rpassword = "7.3.1"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
serde_repr = "0.1.19"
sha2 = "0.10.8"
tokio = { version = "1.41.1", features = ["full"] }
log = "0.4.22"
env_logger = "0.11.5"
clap-verbosity-flag = "2.2.2"

[profile.release]
lto = true
